static/css/main.css
/* General */
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}
/* Header */
.logo {
  display: inline-block;
  font-size: 30px;
  color: azure;
  padding-left: 20px;
}
.logo a{
    text-decoration: none;
    color: white;
}
.logo a:hover{
    color: black;
}
nav {
  width: 100%;
  height: 60px;
  background-color: rgb(167, 34, 127);
  padding: 0;
  line-height: 2;
}
.nav-item {
  display: inline-block;
  text-align: center;
  padding-left: 10px;
}
.nav-item a{
    text-decoration: none;
    color: white;
}
.nav-item a:hover{
    color: black;
}
.navbar-list {
  padding: 0px;
  float: right;
}
.nav-links {
  display: flex;
  font-size: 30px;
  float: right;
  padding-right: 20px;
}

/* Body */
body{
    overflow-x: hidden;
    background-color: #6F5E76;
}
.content-img1{
  width: 50%;
  padding: 1%;
  height: inherit;
  float: right;
}
.content-img2{
  width: 50%;
  padding: 1%;
  height: inherit;
  float: left;
}
.header{
    width: 100%;
    height: 580px;
}
.hdr-img{
    width: 100%;
    height: inherit;
    opacity: 0.7;
}
.center1{
  height: 380px;
}
.center2{
  height: 380px;
}

.center1 p{
  width: 50%;
  padding-top: 5%;
  padding-left: 2%;
  padding-right: 2%;
  text-align: center;
  display: inline-block;
  font-size: 20px;
  color: white;
  opacity: 0.7;
}
.center2 p{
  width: 50%;
  padding-top: 5%;
  padding-left: 2%;
  padding-right: 2%;
  text-align: center;
  display: inline-block;
  font-size: 20px;
  color: white;
  opacity: 0.7;
}
.menu {
  display: none;
  cursor: pointer;
}
.menu div {
  width: 25px;
  height: 3px;
  background-color: rgb(226, 226, 226);
  margin: 5px;
}
.slogan{
    position: absolute;
    top: 30%;
    width: 100%;
    text-align: center;
    color: darkblue;
    font-size: 60px;
    font-style: italic;
}

/* Footer */
.footer{
  width: 100%;
  height: 60px; 
  background-color: dimgrey;
}
.copyright{
  color: white;
  font-size: 20px;
  padding: 15px;
}
/* Media Queries */
@media (max-width: 1024px) {
  .nav-links {
    display: flex;
    width: 50%;
  }
}
@media (max-width: 768px) {
  body{
    overflow-x: hidden;
}
/* navbar */
  .nav-links{
    position: absolute;
    right: 0px;
    height: fit-content;
    top: 60px;
    background-color: rgb(167, 34, 127);
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 50%;
    z-index: 1;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
}
.nav-active{
  transform: translateX(0%);
}
.menu{
  display: block;
  float: right;
  margin-top: 15px;
  margin-right: 15px;
}
/* body */
.header{
  height: 244px;
}
.slogan{
  top: 22%;
  color: white;
  font-size: 30px;
}
/* footer */
}
@media (max-width: 320px){
  .slogan{
    top: 35%;
    color: white;
    font-size: 30px;
  }
}

